--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     --font-size-m: 2.4rem;
     --font-size-l: 3rem;
     --font-size-xl: 4rem;
+    --logo-size: 6rem;
+    --icon-size: 3rem;
 }
 
 /* Resets */
@@ -27,4 +29,12 @@
 html {
     /* font-size: 10px; */
     font-size: 62.5%;
+}
+
+.svg {
+    width: var(--logo-size);
+}
+
+.icon {
+    width: var(--icon-size);
 }
