--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --dark-text-color: rgba(0, 0, 0, 100%);
     --light-text-color: rgba(255, 255, 255, 100%);
     --text-bg-color: rgba(255, 255, 255, 80%);
-    --filter-color-hero: rgba(205, 255, 252, 31%);;
+    --filter-color-hero: rgba(205, 255, 252, 50%);
     --filter-color-secondary: rgba(232, 250, 255, 96%);
     --button-color: rgba(47, 150, 255, 100%);
     --hover-color: #fff;
@@ -44,10 +44,19 @@ body {
     width: var(--icon-size);
 }
 
-.bg-hero {
+.bg-hero,
+.bg-secondary {
     background: var(--filter-color-hero) url(../images/bg1.jpg);
     background-size: cover;
-    width: 100%;
     height: 100vh;
     background-position: bottom center;
+    background-blend-mode: overlay;
+}
+
+.bg-secondary {
+    background: var(--filter-color-secondary) url(../images/bg2.jpg);
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+    background-blend-mode: overlay;
 }
