--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,23 @@ body {
     background-blend-mode: overlay;
 }
 
+.hero-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20%;
+}
+
+.header {
+    /* position: fixed; */
+    justify-content: space-between;
+    padding: 1.2rem 4rem;
+    width: 100%;
+}
+
+.hide-desktop {
+    display: none;
+}
+
 .header,
 .nav-bar,
 .nav-links {
@@ -76,14 +93,20 @@ body {
     align-items: center;
 }
 
-.hide-desktop {
-    display: none;
+.text-bg {
+    position: relative;
+    z-index: 0;
 }
 
-.header {
-    position: fixed;
-    justify-content: space-between;
-    padding: 0 2rem;
+.text-bg::before {
+    position: absolute;
+    content: '';
+    background-color: red;
+    height: 100%;
+    width: 80vw;
+    left: 0;
+    border-radius: 1.5rem 0 0 1.5rem;
+    z-index: -1;
 }
 
 
