--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@
 
 /* Custom propreties */
 :root {
-    --dark-text-color: rgba(0, 0, 0, 100%);
-    --light-text-color: rgba(255, 255, 255, 100%);
-    --text-bg-color: rgba(255, 255, 255, 80%);
-    --filter-color-hero: rgba(205, 255, 252, 50%);
-    --filter-color-secondary: rgba(232, 250, 255, 96%);
-    --button-color: rgba(47, 150, 255, 100%);
+    --dark-text-color: rgba(0, 0, 0, 1);
+    --light-text-color: rgba(255, 255, 255, 1);
+    --text-bg-color: rgba(255, 255, 255, .6);
+    --filter-color-hero: rgba(205, 255, 252, .4);
+    --filter-color-secondary: rgba(232, 250, 255, .96);
+    --button-color: rgba(47, 150, 255, 1);
     --hover-color: #fff;
     --font-family: 'Asap', sans-serif;
     --font-size-s: 1.2rem;
@@ -59,9 +59,10 @@ body {
     height: 100vh;
     background-position: bottom center;
     background-blend-mode: overlay;
+    overflow: hidden; /*  prevents the text-bg::after element from causing side scroll  */
 }
 
-.secondary.bg {
+.secondary-bg {
     background: var(--filter-color-secondary) url(../images/bg2.jpg);
     background-size: cover;
     height: 100%;
@@ -101,12 +102,14 @@ body {
 .text-bg::before {
     position: absolute;
     content: '';
-    background-color: red;
+    background-color: var(--text-bg-color);
     height: 100%;
     width: 80vw;
     left: 0;
     border-radius: 1.5rem 0 0 1.5rem;
     z-index: -1;
+    filter: blur(.2rem);
+    box-shadow: 0 .1rem .1em .1rem rgba(165, 165, 165, 0.1);
 }
 
 
