--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,12 @@ body {
     box-shadow: 0 .1rem .1em .1rem rgba(165, 165, 165, 0.1);
 }
 
+.hero-section {
+    padding: 20rem 10rem 0 3rem;
+}
+
+
+
 
 
 
