--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,20 @@
 :root {
     --dark-text-color: rgba(0, 0, 0, 1);
     --light-text-color: rgba(255, 255, 255, 1);
-    --text-bg-color: rgba(255, 255, 255, .6);
-    --filter-color-hero: rgba(205, 255, 252, .4);
+    --text-bg-color: rgba(255, 255, 255, .8);
+    --filter-color-hero: rgba(109, 166, 170, 0.534);
     --filter-color-secondary: rgba(232, 250, 255, .96);
     --button-color: rgba(47, 150, 255, 1);
     --hover-color: #fff;
     --font-family: 'Asap', sans-serif;
-    --font-size-s: 1.2rem;
-    --font-size-m: 1.6rem;
-    --font-size-l: 2.4rem;
-    --font-size-xl: 4rem;
-    --logo-size: 6rem;
+    --font-size-s: 1.6rem;
+    --font-size-m: 2rem;
+    --font-size-l: 4rem;
+    --font-size-xl: 5rem;
+    --logo-size: 7rem;
     --icon-size: 3rem;
+    --padding-content-text: 5rem 8rem 5rem 5rem;
+    --margin-content-text: 4rem 0;
 }
 
 /* Resets */
@@ -94,30 +96,54 @@ body {
     align-items: center;
 }
 
+.nav-links li {
+    padding: 0 2rem;
+    font-size: var(--font-size-s);
+}
+
 .text-bg {
     position: relative;
     z-index: 0;
 }
 
-.text-bg::before {
+.text-bg::before { /* this is the text background */
     position: absolute;
     content: '';
     background-color: var(--text-bg-color);
     height: 100%;
     width: 80vw;
     left: 0;
+    top: 0;
     border-radius: 1.5rem 0 0 1.5rem;
     z-index: -1;
-    filter: blur(.2rem);
-    box-shadow: 0 .1rem .1em .1rem rgba(165, 165, 165, 0.1);
+    filter: blur(.1rem);
+    box-shadow: 0 .2rem .2em .2rem rgba(165, 165, 165, 0.2);
+}
+
+.header.text-bg::before {  /* makes top left corner of nav-bar 90degress not rounded*/
+    border-radius: 0 0 0 1.5rem;
 }
 
 .hero-section {
-    padding: 20rem 10rem 0 3rem;
+    margin: 15% 0 0 0;
 }
 
+.main-title {
+    font-size: var(--font-size-l);
+    line-height: 6rem;
+    padding: var(--padding-content-text);
+}
 
+.side-text {
+    font-size: var(--font-size-xl);
+}
 
+.content {
+    font-size: var(--font-size-m);
+    line-height: 3rem;
+    padding: var(--padding-content-text);
+    margin: var(--margin-content-text)
+}
 
 
 
