--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@
 
 /* Custom propreties */
 :root {
-    --dark-text-color: rgba(0, 0, 0, 1);
+    --dark-text-color: rgb(0, 0, 0);
     --light-text-color: rgba(255, 255, 255, 1);
     --border-color: rgba(0, 0, 0, .3);
     --text-bg-color: rgba(255, 255, 255, .92);
-    --filter-color-hero: rgba(109, 166, 170, 0.534);
-    --filter-color-secondary: rgba(204, 244, 255, 0.96);
+    --filter-color-hero: rgba(155, 220, 224, 0.534);
+    --filter-color-secondary: rgb(184, 241, 255);
     --button-color: rgb(22, 55, 241);
     --font-family: 'Asap', sans-serif;
     --font-size-s: 1.6rem;
@@ -22,6 +22,7 @@
     --padding-content-text: 5rem 8rem 5rem 5rem;
     --padding-title-text: 2rem 0 2rem 3rem;
     --margin-content-text: 4rem 0;
+    --shadow-color: rgba(165, 165, 165, 0.2);
 }
 
 /* Resets */
@@ -35,6 +36,7 @@ body {
     font-family: var(--font-family);
     font-size: var(--font-size-m);
     font-weight: var(--font-weight-regular);
+    color: var(--dark-text-color);
 }
 
 html {
@@ -54,10 +56,12 @@ li {
 
 .svg {
     width: var(--logo-size);
+    color: var(--dark-text-color);
 }
 
 .icon {
     width: var(--icon-size);
+    color: var(--dark-text-color);
 }
 
 .hero-bg {
@@ -66,7 +70,7 @@ li {
     height: 100vh;
     background-position: bottom center;
     background-blend-mode: overlay;
-    overflow: hidden; /*  prevents the text-bg::after element from causing side scroll  */
+    overflow: hidden; /* prevents the text-bg::after element from causing side scroll  */
 }
 
 .secondary-bg {
@@ -75,7 +79,7 @@ li {
     height: 100%;
     background-position: center;
     background-blend-mode: overlay;
-    overflow: hidden; /*  prevents the text-bg::after element from causing side scroll  */
+    overflow: hidden; /* prevents the text-bg::after element from causing side scroll  */
 }
 
 .hero-container,
@@ -119,7 +123,7 @@ li {
     z-index: 0;
 }
 
-.text-bg::before { /* this is the text background */
+.text-bg::before { /* text background */
     position: absolute;
     content: '';
     background-color: var(--text-bg-color);
@@ -130,10 +134,10 @@ li {
     border-radius: 1.5rem 0 0 1.5rem;
     z-index: -1;
     filter: blur(.1rem);
-    box-shadow: 0 .2rem .2em .2rem rgba(165, 165, 165, 0.2);
+    box-shadow: 0 .2rem .2em .2rem var(--shadow-color);
 }
 
-.text-bg::after { /* this is the vertical border on the text background */
+.text-bg::after { /* vertical border on the text background */
     position: absolute;
     display: inline-block;
     content: '';
@@ -188,15 +192,45 @@ li {
 .certificates-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    background-color: var(--shadow-color);
 }
 
 .certif-img {
-    display: block;
     width: 100%;
     height: auto;
     padding: 2rem;
 }
 
+.map {
+    width: 100%;
+    padding: 2rem;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer.text-bg::before {
+    border-radius: 1.5rem 0 0 0; /* makes bottom left corner of nav-bar 90degress not rounded*/
+}
+
+.contact {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-details {
+    display: flex;
+    align-items: center;
+}
+
+.contact-details > * {
+    margin: 0 1rem;
+}
 
 
 
