--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
     --border-color: rgba(0, 0, 0, .3);
     --text-bg-color: rgba(255, 255, 255, .92);
     --filter-color-hero: rgba(155, 220, 224, 0.534);
-    --filter-color-secondary: rgb(184, 241, 255);
+    --filter-color-secondary: rgba(200, 248, 255, .99);
+    /* --filter-color-secondary: rgb(184, 241, 255); */
     --button-color: rgb(22, 55, 241);
     --font-family: 'Asap', sans-serif;
     --font-size-s: 1.6rem;
@@ -78,7 +79,7 @@ li {
     background-size: cover;
     height: 100%;
     background-position: center;
-    background-blend-mode: overlay;
+    background-blend-mode: lighten;
     overflow: hidden; /* prevents the text-bg::after element from causing side scroll  */
 }
 
@@ -177,7 +178,7 @@ li {
 .title {
     font-size: var(--font-size-l);
     padding: var(--padding-title-text);
-    margin: 1rem 0;
+    margin: 2rem 0;
     font-weight: 400; /* Adding this specifically, for some reason the font weight defined in body does not cascade here  */
 }
 
@@ -189,10 +190,16 @@ li {
     font-weight: 400; /* Adding this specifically, for some reason the font weight defined in body does not cascade here  */
 }
 
+.certificates,
+.location {
+    margin-bottom: 10rem;
+}
+
 .certificates-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: var(--shadow-color);
+    background-color: rgba(255, 255, 255, .50);
+    border-radius: 1rem;
 }
 
 .certif-img {
