--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --light-text-color: rgba(255, 255, 255, 1);
     --border-color: rgba(0, 0, 0, .3);
     --text-bg-color: rgba(255, 255, 255, .92);
+    --section-bg-color: rgba(255, 255, 255, 0.5);
     --filter-color-hero: rgba(155, 220, 224, 0.534);
     --filter-color-secondary: rgba(200, 248, 255, .99);
     --filter-color-other: rgba(200, 255, 252, 0.8);
@@ -25,7 +26,7 @@
     --padding-main-title: 5rem calc(var(--padding-right) + 20rem) 5rem 3rem; /*adding some extra padding to the right*/
     --padding-content: 5rem calc(var(--padding-right) + 15rem) 5rem 5rem; /*adding some extra padding to the right*/
     --padding-title: 2rem var(--padding-right) 2rem 3rem;
-    --padding-sm-container: 2rem var(--padding-right) 2rem 2rem;
+    --padding-sm-container: 0 var(--padding-right) 0 0;
     --margin-content: 4rem 0;
     --margin-title: 2rem 0;
     --shadow-color: rgba(165, 165, 165, 0.2);
@@ -117,24 +118,32 @@ button {
     display: flex;
 }
 
-.header {
+.header-fixed {
     top: 0;
     position: fixed;
     width: inherit;
     z-index: 1;
 }
 
+.header {
+    padding: var(--padding-header);
+}
+
 .hide-desktop {
     display: none;
 }
 
-.nav-links li {
+.nav-links  {
+    padding-right: 2rem;
+}
+
+.nav-link {
     list-style: none;
     padding: 0 1rem;
     font-size: var(--font-size-s);
 }
 
-.nav-links li:hover {
+.nav-link:hover {
     transform: scale(1.1);
     color: var(--button-color);
     transition: color .05s ease, transform .05s;
@@ -143,7 +152,7 @@ button {
 .text-bg {
     position: relative;
     width: 100%;
-    padding: var(--padding-header);
+    /* padding: var(--padding-header); */
     background-color: var(--text-bg-color);
     border-radius: 1.5rem 0 0 1.5rem;
     box-shadow: 0 .2rem .2em .2rem var(--shadow-color);
@@ -205,6 +214,11 @@ button {
     padding: 2rem;
 }
 
+.certif-bg {
+    background-color: var(--section-bg-color);
+    border-radius: 1rem;
+}
+
 .map {
     width: 100%;
     padding: 2rem;
@@ -237,7 +251,7 @@ button {
     line-height: 4rem;
 }
 
-footer {
+footer { /* ToDo Update smaller container!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -249,7 +263,7 @@ footer.text-bg::before {
     border-radius: 1.5rem 0 0 0; /* makes bottom left corner of nav-bar 90degress not rounded*/
 }
 
-.contact {
+.flex-wrap {
     display: flex;
     flex-wrap: wrap;
 }
