--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ button {
     position: relative; /*for .text-bg::after*/
     width: 100%;
     background-color: var(--text-bg-color);
-    background: linear-gradient(142deg, rgba(255,255,255,1) 66%, rgba(255,255,255,0) 100%); 
+    background: linear-gradient(90deg, rgba(255,255,255,0.9177871832326681) 69%, rgba(255,255,255,0) 100%); 
     border-radius: 1.5rem 0 0 1.5rem;
     /* box-shadow: 0 .2rem .2rem .2rem var(--shadow-color); */
 }
