--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,9 @@ button {
 .container {
     margin-left: var(--margin-left);
     position: relative; /*for .header-fixed*/
+    top: 0;
     width: calc(100% - var(--margin-left));
-    height: auto;
+    /* height: auto; */
 }
 
 .smaller-container {
@@ -121,7 +122,11 @@ button {
     align-items: center;
 }
 
-.flex-c {
+.flex-sa {
+    justify-content: space-around;
+}
+
+.flex-cen {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,6 +134,15 @@ button {
 
 .flex {
     display: flex;
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flex-col {
+    flex-direction: column;
 }
 
 .header-fixed {
@@ -188,13 +202,17 @@ button {
 }
 
 .main-section {
-    margin-top: 15%;
+    /* margin-top: 15%; */
     width: 100%;
+    height: 100vh;
+}
+
+.height-inherit {
+    height: inherit;
 }
 
 .main-title {
     position: relative; /*for .side-text*/
-    margin: var(--margin-content);
 }
 
 .motto {
@@ -247,9 +265,6 @@ button {
 }
 
 .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 20rem 0;
 }
 
@@ -274,11 +289,6 @@ button {
 
 .footer.text-bg {
     border-radius: 1.5rem 0 0 0; /* makes bottom left corner of nav-bar 90degress not rounded*/
-}
-
-.flex-wrap {
-    display: flex;
-    flex-wrap: wrap;
 }
 
 .contact-details {
