--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,24 @@
     --section-separator: 0 0 8rem 0;
 }
 
+/* Resets */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-weight: var(--font-weight-regular);
+}
+
+body {
+    font-family: var(--font-family);
+    font-size: var(--font-size-m);
+    color: var(--dark-text-color);
+    position: relative; /*for .back-to-top*/
+}
+
+
 html {
     /* font-size: 10px; */
     font-size: 62.5%;
 }
-
 
